--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,80 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight:700;
+  font-size: 27px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  
+  justify-content: center;
 }
 
 .sidebar {
-  width: 300px;
+  width: 200px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 16px;
+
 }
 
 .card {
   border: 1px solid #eee;
+  width:200px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding-bottom: 100px;
+padding: 0px 10px 100px 10px;
+}
+
+.content{
+  display: flex;
+  gap:20px;
+  padding-right: 200px;
+}
+.divs{
+  display: flex;
+  flex-direction: column;
+  font-size:10px;
+}
+.one{
+  display: flex;
+  margin-bottom: 20px;
+  
+  gap: 16px;
+}
+.first{
+  margin-top: 20px;
+
+}
+a{
+  text-decoration: none;
+  color:white;
+}
+ul{
+  list-style-type: none;
+  padding:0px;
+  margin: 0px;
+}
+
+.header,
+.footer{
+  display:flex;
+  align-items: center;
+}
+li {
+  margin-bottom: 16px;
 }
