--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -5,6 +5,10 @@ html {
 }
 
 .container {
+  display:inline-grid;
+  gap:5px ;
+  grid-template-columns: 200px 900px;
+  grid-template-rows: 100px 100px 500px 100px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -21,10 +25,13 @@ html {
 }
 
 .header {
+
   background-color: #006157;
 }
 
 .sidebar {
+  grid-row-start: 2;
+  grid-row-end: 4;
   background-color: #005B94;
 }
 
@@ -45,4 +52,8 @@ html {
   font-family: sans-serif;
   color: white;
   text-align: left;
+}
+.header, .footer{
+  grid-column-start: 1;
+  grid-column-end: 3;
 }
