--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -1,59 +1,28 @@
-body,
-html {
-  height: 100%;
-  margin: 0;
+.grid-container {
+  resize: both;
+  overflow: auto;
+  display: grid;
+  gap: 4px;
+  padding: 4px;
+  border: 1px solid grey;
+  background-color: skyblue;
+  grid-template-rows: 150px 150px;
+  grid-template-columns: 150px 150px 150px 150px 150px;
 }
 
-.container {
-  display:inline-grid;
-  gap:5px ;
-  grid-template-columns: 200px 900px;
-  grid-template-rows: 100px 100px 500px 100px;
+.grid-item {
+  background-color: #444;
   text-align: center;
-  height: 100%;
-  padding: 16px;
-  box-sizing: border-box;
-}
-
-.container div {
-  padding: 15px;
-  font-size: 32px;
-  font-family: Helvetica;
-  font-weight: bold;
-  color: white;
-  border-radius: 15px;
-}
-
-.header {
-
-  background-color: #006157;
-}
-
-.sidebar {
-  grid-row-start: 2;
-  grid-row-end: 4;
-  background-color: #005B94;
-}
-
-.nav {
-  background-color: #642cde;
-}
-
-.article {
-  background-color: #7E1DC3;
-}
-
-.footer {
-  background-color: #393f4d;
-}
-
-.article p {
-  font-size: 18px;
+  color: #ddd;
   font-family: sans-serif;
-  color: white;
-  text-align: left;
+  font-size: 1.5rem;
+  padding: 12px;
 }
-.header, .footer{
-  grid-column-start: 1;
-  grid-column-end: 3;
+
+p {
+  margin: 12px auto 24px;
+}
+
+img {
+  height: 60px;
 }
