--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -89,3 +89,63 @@
   font-size: 13px;
   font-weight: normal;
 }
+
+/*solution*/
+.article{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+  gap: 15px;
+}
+.article .card {
+  height: 200px;
+}
+.nav  ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  list-style-type: none;
+}
+.container{
+  display: grid;
+  grid-template-columns:1fr 4fr;
+  gap: 4px;
+}
+.header{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+.sidebar{
+  display: grid;
+  gap: 50px;
+  grid-row-start: 2;
+  grid-row-end: 4;
+  /* grid-column-start: 1;
+  grid-column-start: 1; */
+}
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  list-style-type: none;
+}
+.footer{
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu {
+  align-self: center;
+}
+.side-content,
+.photo {
+  display: grid;
+  align-items: center;
+}
+.card p {
+  padding: 5px;
+}
